--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   flutter:
-    sdk: flutter
-  get: ^4.6.5
+    sdk: flutter  
   random_avatar: ^0.0.7
   azlistview: ^2.0.0  
   provider: ^6.0.5
   cupertino_icons: ^1.0.2
+  go_router: ^6.0.6
 
 dev_dependencies:
   flutter_test:
@@ -54,9 +54,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/data/contacts.json    
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
