--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,8 @@ dependencies:
   azlistview: ^2.0.0  
   provider: ^6.0.5
   cupertino_icons: ^1.0.2
-  go_router: ^6.0.6
+  go_router: ^6.0.6  
+  awesome_select: ^6.0.0
 
 dev_dependencies:
   flutter_test:
